[package]
name = "mdr"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
notify = "7"
pulldown-cmark = "0.12"
unicode-width = "0.2"
dirs = "6"
nucleo-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
toml = "0.8"
